--- a/ux.html
+++ b/ux.html
@@ -69,7 +69,7 @@ Bruger NYT boks navn
 
                 </p>
 
-                <img src="billeder/burndown.png">
+                <img src="billeder/designsprint.png" alt="process til prototype">
 
                 <h6>Usability - Fronter</h6>
                 <p>Jeg valgte en sketch, som jeg arbejde videre med i Adobe XD. Jeg tog udgangspunkt i desktop version. Der var krav om, at følge et styletile som var uddeligeret, derfor har min prototype ikke ikke Fronter's orginale farver. Jeg udarbejde en usability test, jeg valgte én af de testpersoner, som tidligere havde testet Fronters site, for at se om min prototype er et bedre udkast, end det hun testede før.
@@ -147,7 +147,7 @@ Bruger samme boksnavn som i animtaion html
                 </p>
 
 
-                <img src="billeder/trash.png" alt="Trash spil">
+                <img src="billeder/webprototype.png" alt="web prototype">
 
             </div>
 
@@ -184,7 +184,7 @@ Bruger samme boksnavn som i animtaion html
                     <h6>Design Sprint- Decide og Test</h6>
                     <p>The user flow lavede inden vi udarbejdede Storyboard, for ikke at fastlåse storyboard indtil til sidst hvor vi tegnede the færdigt. Vi testet prototypen via en Grid testen, vi fik konkruktiv feedback som vi valgte bruge, for eksempel havde vi en kamera icon, som havde den funktion at skanne QR-koder, men der var ingen af test personer som forstod dens funktion, det ændrede vi. </p>
 
-                    <img src="billeder/burndown.png">
+                    <img src="billeder/nativeapp.png" alt="native app process">
 
                     <h6>Pitch</h6>
                     <p>Vi skulle nu sælge vore kantine prototype. Vi prøvede at fange opmærksomheden gennem "Needs" og fortælle om et situationen, de selv kunne relatere til. "Approach" vi har testet vores app og respond er at, det er en og overskuelig løsning til din travle hverdag. "Benefits" Appen er gratis, til fordel spare du at download den.
