ændringer med bruger test video

--- a/ux.html
+++ b/ux.html
@@ -79,22 +79,23 @@ Bruger NYT boks navn
 
         <!--
 
-Bruger samme boksnavn som i animtaion html
+Bruger ikke samme boksnavn
 -->
 
-        <div class="boks5_5_5">
+        <div class="boks7_7_7">
 
-            <div class="boks5_5_5_5">
+
+            <div class="boks7_7_7_7">
                 <video controls>
                     <source src="video/brugertest_jessica%20.mp4"></video>
             </div>
 
-            <div class="boks5_5_5_5_5">
+            <div class="boks7_7_7_7_7">
                 <video controls>
                     <source src="video/brugertest_julie%20.mp4"></video>
             </div>
 
-            <div class="boks5_5_5_5_5">
+            <div class="boks7_7_7_7_7">
                 <video controls>
                     <source src="video/brugertest_Marie.mp4"></video>
             </div>
