--- a/CV.html
+++ b/CV.html
@@ -36,7 +36,7 @@
         </div>
 
         <div class="boks2_2">
-            <p>Mit navn er Joanna, jeg er en glad pige på 21 år. For et år siden valgte jeg, at flytte væk fra min dejlige hjemby Svendborg til København, som jeg i dag elsker. Jeg studerer multimediedesign fordi jeg rigtig godt kan lide, at sidde og designe med farver og udfordre mig på det punkt. Gennem min baggrund på Svendborg Handelsgymnasium er min interesse også for samarbejde med virksomheder i den virkelige verden. I min fritid elsker jeg at arbejde, shoppe og være sammen med mine veninder. </p>
+            <p>Mit navn er Joanna, jeg er en glad pige på 21 år. For et år siden valgte jeg at flytte væk fra min dejlige hjemby Svendborg til København, som jeg i dag elsker. Jeg studerer multimediedesign fordi jeg rigtig godt kan lide, at sidde og designe med farver og udfordre mig på det punkt. Gennem min baggrund på Svendborg Handelsgymnasium er min interesse også for samarbejde med virksomheder i den virkelige verden. I min fritid elsker jeg at arbejde, shoppe og være sammen med mine veninder. </p>
         </div>
 
     </div>
