--- a/webdesign.html
+++ b/webdesign.html
@@ -39,7 +39,7 @@
 
 
             <div class="boks4_4">
-                <p>I dette tema handlede det om at få et godt fundament, få lært at bruge redskaberne, med formål om at få bygget mere og mere på i de næste temaer. Fokuspunktet om at lærer det grundlæggende for et site, dermed komme i kendskab med Brackets - HTML og CSS. Gennem CSS berørte særligt af koderne flexbox og position med mere, men disse to har en særlig en funktion som er, at gøre sitet responsivt. Adobe InDesign og Adobe Photopshop komplementere kode delen af sitet. Stilartsitet afspejler brugen af alle færdighederne, samlet et sted </p>
+                <p>I dette tema handlede det om, at få et godt fundament for kodning, få lært at bruge redskaberne, med formål om at få bygget mere og mere på i de næste temaer. Fokuspunktet var at lære det grundlæggende for et site, dermed komme i kendskab med Brackets - HTML og CSS. Vi lærte om flexbox og position, eftersom at sitet skulle være responsiv. Adobe InDesign og Adobe Photopshop er et redskab som kan bruges i forbindelse med Styletile, moodboard, splashbillede og billede redigering. Stilartsitet afspejler brugen af alle færdighederne, samlet et sted </p>
             </div>
 
         </div>
@@ -72,20 +72,20 @@
                     <h5>Process</h5>
                 </div>
                 <h6>Moodboard</h6>
-                <p>Fasen inden på begyndelsen af sitet, vedrøre research som omhandler at finde billeder og farver, som skal til sammen udgør et moodboard. Stilarten, Arts and Craft, er dannet af kunstnerne Willian Morries, Louis C. Tiffany med mere. derfor var researchen særligt brugt hos dem. Gennem moodboardet var risikoen for at have forskellige fotostile og stemningerne, formindsket. Moodboardet var godt at have i baghovedet når der skulle designes.
+                <p>Fasen inden på begyndelsen af sitet, vedrørede research, som var at finde billeder og farver, som til sidst skulle blive 3 moodboards. Stilarten, Arts and Craft, er dannet forskellige kunstnere heribland Willian Morries og Louis C. Tiffany. Moodboardet er et godt redskab at have når sitet skulle designes.
                 </p>
 
 
                 <h6>Splash</h6>
-                <p>Det var svært at gøre splash billedet færdigt fordi Photoshop er et redskab, som indebærer så mange muligheder. Splashbilledet er det første man ser på sitet, derfor vægter det rigtig meget, da det er med til at give det første indtryk. Mit fokus punkt var at gøre det lidt sjovt men også andereledes men stadig holde til farverne og stilen i moodboardet.
+                <p>Splashbilledet er det første man ser på sitet, derfor vægter det rigtig meget, da det er med til at give det førstehåndsindtryk. Mit fokus punkt var at gøre det lidt sjovt men også andereledes men stadig holde til farverne og stilen i moodboardet.
                 </p>
 
                 <h6>Styletile</h6>
-                <p>Fonterne som er brugt er alle web fonter, det var vigtigt at de komplementerede hinanden og at de hele til sammen ville give et udtryk, af arts and craft stilen nemlig håndværk. Brødtekstens font er valgt så, den er håndgribelig at læse hvorimod overskrifter er der leget lidt med. Fonterne hedder 'Noto Serif JP, sans serif', 'Calligraffitti, cursiv' og 'melimelinda'.</p>
+                <p>Fonterne som er brugt er alle web fonter, det var vigtigt at de komplementerede hinanden, og de til sammen ville give et udtryk, af arts and craft stilen. Brødtekstens font er valgt så den er håndgribelig at læse. Jeg har valgt fonten på overskrifterne skulle være med fint håndværk stil. Fonterne hedder 'Noto Serif JP, sans serif', 'Calligraffitti, cursiv' og 'melimelinda'.</p>
 
 
                 <h6>Favicon</h6>
-                <p>Der blev idé generede til det sidste touch til sitet, det endte med en maler pensel, med brug af de samme farver som allerede var på sitet, med vilje så det hele blev til en enhed. Det vidste sig, at faviconet størrelse, er 16x16 px og derfor blev faviconet ikke tydeligt nok, med de valgte farver.
+                <p>Jeg valgte at faviconet skulle være en maler pensel, hvor jeg valgte de samme farver fra sitet. Det vidste sig, at faviconet størrelse, er 16x16 px og derfor blev faviconet ikke tydeligt nok, med de valgte farver, jeg skulle have mere kontrakte farver, så penslen vil fremstå skarpere.
                 </p>
 
             </div>
@@ -120,7 +120,7 @@
                     <h5>Reflektioner</h5>
                 </div>
 
-                <p>Det var lang process i forhold til hvor det hele startede ud med et moodboard, til at være et stilartsite og derefter rekonstruere det så det blev responsivt, på forskellige devices med de ekstra elementer, splash og styletile. Layoutdiagrammet og wireframe var super vigtig at følge nøje, for at få den præcis struktur, som der var krav på. Editeringen i Photoshop og bearbejdningen i InDesign var super omfattende men som alt andet, så blev det nemmere jo mere man sad og arbejdede med programmet. Fonts er ikke bare noget man vælger, der skal være en mening med valget, det kan være i form at en råd tråd eller hvor fonten skal bruges.
+                <p>Det hele startede ud med et moodboard, til at være et stilartsite og derefter rekonstruere det, så det blev responsivt. Layoutdiagrammet og wireframe var super vigtig at følge nøje, for at få den præcis struktur, som der var krav på. Editeringen i Photoshop og bearbejdningen i InDesign var super omfattende men som alt andet, så blev det nemmere jo mere man sad og arbejdede med programmet. Fonts er ikke bare noget man vælger, der skal være en mening med valget, det kan være i form at en rådtråd eller hvor fonten skal vises/bruges.
                 </p>
             </div>
         </div>
