--- a/video.html
+++ b/video.html
@@ -36,7 +36,7 @@
             </div>
 
             <div class="boks5_5">
-                <p>I video temaet berøres alt vedrørende video, det omhandler research af det der skal filmes. Pre production processsen, vægter en stor del af hele processen, fra start til slut. Det er for eksempel forbedredelsesguide, interviewspørgsmål, B-rolls, kontrakt, test alle udstyr og meget mere. Temaet her introducere Adobe Premier Pro, Adobe Photoshop derudover berøre det også andre programmer som Brackets og Adobe InDesign. I den første del er der kun fokus på video produktion alt fra establish shot, intro og outtro, musik og storyboard med mere. Derefter var igen fokus på video produktion, men inddraget en virksomhed, som er selvvalgt. I denne del var der også krav på, en redesign af virksomheden.
+                <p>I video temaet berøres alt vedrørende video, det omhandler research af det der skal filmes. Pre production processsen, vægter en stor del af hele processen, fra start til slut. Det er for eksempel forbedredelsesguide, interviewspørgsmål, B-rolls, kontrakt, test alle udstyr og meget mere. Temaet her introducere Adobe Premier Pro, Adobe Photoshop derudover berøre det også andre programmer som Brackets og Adobe InDesign. I den første del er der kun fokus på video produktion alt fra establish shot, intro og outtro, musik og storyboard med mere. Derefter var igen fokus på video produktion, men inddraget en virksomhed, som var selvvalgt. I denne del var der også krav på, en redesign af virksomhedens hjemmeside.
                 </p>
             </div>
 
@@ -83,21 +83,22 @@
 
                 <h6>Forbedredelsesguide</h6>
 
-                <p>Anne-Sophie er den medvirkende i pilot vidoen, hendes passion er Cosplay. Camilia Gejl Olsen og jeg, var sammen om denne opgave. Cosplay er ikke noget jeg vidste så meget om men Camilia derimod har en fortid og har et stort kendsskab til det. Det betød at der skulles researches fra min side af. Forarbejdelsen inden interviewet, var at have mange interviewspørgsmål klar. B-rollsene var bestemt, vi ville have videoklip af makeup, kostumer, hendes samling og klip af Anne-Sophie transformere sig. Mikrofon og kamera blev testet. Der var krav på mindst et etablish shot, det besluttede vi os for at det skulle være introen og outroen.
+                <p>Anne-Sophie er den medvirkende i pilot vidoen, hendes passion er Cosplay. Camilia Gejl Olsen og jeg, var sammen om denne opgave. Cosplay er ikke noget jeg vidste så meget om, men Camilia derimod har et stort kendsskab til det. Det betød at der skulles researches fra min side af. Forarbejdelsen inden interviewet havde vi gjort interviewspørgsmålene klar. B-rollsene var bestemt, det skulle være af: makeup, kostumer, hendes samling og klip af Anne-Sophie transformere sig. Mikrofon og kamera blev testet. Der var krav på mindst et etablish shot, det besluttede vi os for at det skulle være introen og outroen.
                 </p>
 
 
                 <h6>B-rolls</h6>
-                <p>Inden mødet med Anne-Sophie var B-rollsene bestemt men, fordi vi ikke kender hende og ikke har været ude ved interview lokationen før, var det ikke 100% muligt at udføre de B-rolls vi havde bestemt os for. Det betød at vi måtte improvisere og filme det som var muligt at filme. B-rollsene kan medvirke til at øge spændingen og fange interesse hos seeren, men eftersom at vi ikke havde mange at gøre godt med, valgt jeg et alternativ løsning, stilleståendebilleder.</p>
+                <p>Inden mødet med Anne-Sophie var B-rollsene bestemt men fordi vi ikke kender hende og ikke har været ude ved interview lokationen før, var det ikke 100% muligt at udføre de B-rolls vi havde bestemt os for. Det betød at vi måtte improvisere og filme det passede ind. B-rollsene kan medvirke til at øge spændingen og fange interesse hos seeren, men eftersom at vi ikke havde mange at gøre godt med, valgt jeg et alternativ løsning, stilleståendebilleder.</p>
 
 
                 <h6>Redskaber</h6>
-                <p>Spejlreflekskamera, mikrofon og kamera tripod brugte vi til at filme og optage med. Det tog noget tid at finde billedets balance, gjorde at der var nok luft over hovedet, der skulle rykkes rundt på nogle af hendes ting for at det lykkedes. Kameraet var i vater på tripoden.
+                <p>Spejlreflekskamera, mikrofon og kameratripod brugte vi til at filme og optage med. Det tog noget tid at finde billedets balance, i forhold luften over hovedet på interview personen. Vi lærte forskellige tips, som at klappe foran kameraet inden vi begyndte at filme, holde et hvidt papir over kameraet, holde kamaeraet i vater med mere.
+
                 </p>
 
 
                 <h6>Video klipning</h6>
-                <p>Vi havde både inde- og udendørs klip. Den dag var solen fremme, så der var masser naturligt lys, det gjorde at der skulle redigeres på klippende for at formindste konstrakten. </p>
+                <p>Vi havde både inde- og udendørs klip. Den dag var solen fremme, så der var masser naturligt lys, det gjorde at der skulle redigeres i klippende for at formindste konstrakten. </p>
 
             </div>
             <div class="boks5_2">
@@ -106,12 +107,12 @@
 
                 <h6>Forbedredelsesguide</h6>
 
-                <p>Sascha Hirtsgaards ejer af Guys and Dolls, som var den virksomhed vi valgte at redesigne. Vi startede ud med at research, først for at se hvilken slags virksomhed Guys and Dolls er. Vi fandt ud af at det er en familie ejet virksomhed, som har en særlig historie med sig, det er en frisør salon, som beboer i Helsingør har en eller anden relation til. Vi valgte at kernen i virksomhedsvideon, skulle være, deres historik og hvem de er. Det var tydeligt for os, at det ikke er en video, som skal deles landet over, men en video særligt til Guys and Dolls målgruppe som primært kvinder fra 16-60 års alderen. Vi var forbedredt med storyboard, produktionsplan, interview spørgsmål og bestemte B-rolls.
+                <p>Sascha Hirtsgaards ejer af Guys and Dolls, som var den virksomhed vi valgte at redesigne. Vi startede ud med research, for at se hvilken slags virksomhed Guys and Dolls er. Vi fandt ud af, at det er en familie ejet virksomhed, som har en særlig historie med sig, det er en frisør salon, som beboer i Helsingør har en eller anden relation til. Vi valgte at kernen i virksomhedsvideon, skulle være deres historik og hvem de er. Det var tydeligt for os, at det ikke skulle være en video, som skulle ses landet over, men derimod en video særligt til Guys and Dolls stamkunder og nye kunder. Vi var forbedredt med storyboard, produktionsplan, interview spørgsmål og bestemte B-rolls.
                 </p>
 
 
                 <h6>Storyboard</h6>
-                <p>Storyboard var enorm brugbar til at have en overblik, da vi var ude på lokationen i forhold til hvilke klip vi skulle filme og hvilke vi manglede. Der var en scene i vores storyboard, som vi synes var god, da vi sad og brainstormede. Den var så ikke lige så god, da det blev filmet, så det endte med vi ikke brugte hele den scenen.</p>
+                <p>Storyboard var enorm brugbar til at have en overblik, da vi var ude på lokationen, for at vi havde styr på, hvilke klip vi skulle filme og hvilke vi manglede. Vi fandt ud af at storyboardet var godt at have, men det betød ikke at der stadig var plads til ændringer. </p>
 
 
                 <h6>B-rolls</h6>
@@ -120,12 +121,12 @@
 
 
                 <h6>Redskaber</h6>
-                <p>Iphone, mirkofon, kameratripod og DJI Osmo Mobile. Vi valgte ikke at bruge en spejlreflekskamera, fordi vil se hvilken kvalitet iphonen kunne byde på.
+                <p>De udstyr vi brugte var Iphone, mirkofon, kameratripod og DJI Osmo Mobile. Vi valgte ikke at bruge en spejlreflekskamera, fordi vil se hvilken kvalitet iphonen kunne byde på.
                 </p>
 
 
                 <h6>Video klipning</h6>
-                <p>Vi brugt langtid på at redigere videoklippene, fordi lyset i salonen var varm men lyset fra vinduerne var kolde det gav kontrakt og ubalance.</p>
+                <p>Vi brugt lang tid på at redigere videoklippene, fordi lyset i salonen havde en varm tone men lyset fra vinduerne var koldt, det gav en kontrakt og ubalance.</p>
 
             </div>
         </div>
@@ -165,11 +166,11 @@
                 <h7>Redesign - Guys and Dolls</h7>
 
                 <h6>Gruppekontrakt</h6>
-                <p>Gennem kontrakten fandt vi ud, af hvordan vi hver især var indstillet til opgaven, vi delte vores kompetencer og svagheder. Vi var enige om at kommunikation og kontakt var det som vi ville fokusere på som team. Derudover var vi alle åbent for at blive bedre til kodning, videoklipning, overblik med mere.</p>
+                <p>Gennem kontrakten fandt vi ud af, hvordan vi hver især var indstillet til opgaven, vi delte vores kompetencer og svagheder. Vi var enige om at kommunikation og kontakt var det, som vi ville fokusere på som team. Derudover var vi alle åbent for at blive bedre til kodning og videoklipning</p>
 
 
                 <h6>Research</h6>
-                <p>Gennem research fandt vi hurtigt ud af at deres hjemmeside ikke, afspejler deres professionelitet. De er særligt aktiv på de sociale medier særligt Instagram og Facebook. Vi ville gerne redesigne deres hjemmeside, så den fik den samme stil og vi vil tydelig gøre at det er en hjemmeside for en frisør salon. Det var resultaterne fra 5 sec-test og Bert-testen som også styrkede vores idé. Produkt billederne på Guys and Dolls nuværende hjemmeside, synes vi var super fine og de passede til den stil, vi gerne vil gå efter, det stilrene og professionelt design. Frisure billederne var ikke det vi søgte, fordi de ikke er hverdags relateret frisure man til hverdag vil efterspørge. Vi valgte derfor at bruge, deres billeder fra Instagram og Facebook og redigere dem efter vores stil.
+                <p>Gennem research fandt vi hurtigt ud af at deres hjemmeside ikke, afspejler deres professionelitet. De er særligt aktiv på de sociale medier, særligt på Instagram og Facebook. Vi ville gerne redesigne deres hjemmeside, så den fik den samme stil for at tydelig gøre at det er en hjemmeside for en frisør salon. Resultaterne fra 5 sec-test og Bert-test styrkede vores idé til at fokusere på, at hjemmesiden skulle afspejle en frisør. Vi ville gerne gå efter det stilrene og professionelt design. Billederne af produkter på Guys and Dolls nuværende hjemmeside, synes vi var super fine og de passede til den stil, vi vil have. Frisure billederne var ikke det vi søgte, fordi de ikke er hverdags relateret frisure, man til hverdag vil efterspørge. Vi valgte derfor at bruge, deres billeder fra Instagram og Facebook og redigere dem efter vores stil.
                 </p>
 
 
@@ -179,15 +180,15 @@
 
 
                 <h6>Moodboard</h6>
-                <p>Gun Britts hjemmeside var en inspirations kilde, som vi ofte blev inspirede af. På vi vil holde os stilret, derefte bruge sort og hvid så det giver et professionelt indtryk. Den super lækker gule/orange farve, er salonens facade, den valgte vi inkorporere i designet, så salonens historiske aura kom med.</p>
+                <p>Gun Britts hjemmeside var en inspirationskilde, som vi blev inspirede af. På vi vil holde os stilret, derefte bruge sort og hvid så det giver et professionelt indtryk. Den super lækker gule/orange farve, er salonens facade, valgte vi at inkorporere i designet, så salonens historiske aura kom med.</p>
 
 
                 <h6>Styletile</h6>
-                <p>Guys and Dolls font er den klassike helvetics, sans serif, den valgte vi at bruge også fordi det er en neutral font. Redigering af billederne på vores redesign gjorde i Photoshop, vi brugte for det meste ' Brightness/contrass og levels.
+                <p>Guys and Dolls font er den klassike helvetics, sans serif, den valgte vi også at bruge, fordi det er en neutral font. Redigering af billederne på vores redesign blev gjorde i Photoshop, vi brugte for det meste "Brightness/contrass" og "levels".
                 </p>
 
                 <h6>Kodning</h6>
-                <p>Wireframes og Layoutdiagram brugt vi i forhold til at HTML opbygning og designe i CSS. Vi lærte en ny kode, parallax, den fungere som en baggrundsbillede som hænger fast når man scoller ned. </p>
+                <p>Wireframes og Layoutdiagram brugt vi i forhold til at HTML opbygning. Vi lærte en ny kode, parallax, den fungere som en baggrundsbillede som hænger fast når man scoller ned. </p>
 
             </div>
         </div>
@@ -212,8 +213,7 @@
                     <h5>Reflektioner</h5>
                 </div>
 
-                <p>Gennem dette tema blev der introduceret to helt programmer som er Adobe Photoshop og Adobe Premier Pro. Det var enormt fedt at have hands on på video klipning i Pilotopgaven, vi kom igennem alt fra B-rolls, establisn shot til forbedredelse guide og komme ud til en rigtig virksomhed og mærke hvordan det er at være ude på lokation og filme. Bert- og 5 sec-test er redskab, hvor man hurtig kan få en respons/feedback på. Ud fra 5 sec-test, valgte at ændre vores design inden den skulle afleveres, fordi det parallax baggrundsbillede vi havde, havde ikke den samme stil som alt andet på sitet. Gruppekontrakt gav en boost, til at vær afklart fra starten om, hvad vi som team har af mål, svagheder, styrker og så videre.
-                </p>
+                <p>Gennem dette tema blev der introduceret to helt programmer som er Adobe Photoshop og Adobe Premier Pro. Det var enormt fedt at have hands on på video klipning i Pilotopgaven, vi kom igennem alt fra B-rolls, establisn shot til forbedredelse guide og komme ud til en rigtig virksomhed, og mærke hvordan det er, at være ude på lokation og filme. Bert- og 5 sec-test er redskab, hvor man hurtig kan få en respons/feedback. Gruppekontrakt gav en boost til at være afklar fra starten om, hvad vi som team har af mål, svagheder, styrker og så videre. </p>
             </div>
         </div>
 
@@ -232,8 +232,6 @@
                 <div class="linkboks3">
                     <a href="http://www.widespace.dk/kea/02-content/02-redesign/02_02_05_dokumentationssite/">Link til dokumentationssite</a></div>
             </div>
-
-
         </div>
 
 
